# polsia-fork

./: .env.example  .gitignore  AGENT_ACTIVATION.md  CLAUDE.md  Dockerfile  Makefile  PLAN_BUSINESS.md  README.md  alembic.ini  conftest.py  docker-compose.ci.yml  docker-compose.yml  fly.toml  polsia.db  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_onboarding_completed.py
app/: __init__.py  __main__.py  config.py  main.py
app/agents/: __init__.py  ads_management.py  base.py  business_planning.py  code_generation.py  competitor_research.py  crew_factory.py  customer_support.py  deployment.py  email_outreach.py  finance.py  orchestrator.py  prompts.py  social_media.py
app/core/: __init__.py  auth.py  chroma_client.py  database.py  events.py  logging.py  ratelimit.py  redis_client.py
app/models/: __init__.py  activity_log.py  ad.py  agent_run.py  base.py  company.py  company_config.py  competitor.py  email.py  finance.py  report.py  (+5 more)
celery_app/: __init__.py  beat_schedule.py  celery_config.py  worker.py
docs/: ACCEPTANCE_TESTING.md
e2e/: agents.spec.ts  dashboard.spec.ts  package.json  playwright.config.ts  settings.spec.ts
frontend/: fly.toml  jest.config.js  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
marketing/: action-plan.md  final-research-plan.md  index.html  v2ex-post.md
nginx/: nginx.conf
scripts/: deploy.sh  init_db.sh  seed_company.py  seed_demo.py
tests/: conftest.py
(+86 files in other folders)
