[project]
name = "polsia-fork"
version = "0.1.0"
description = "AI-powered autonomous company operations platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.0",
    "hiredis>=3.0.0",
    "celery>=5.4.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
agents = [
    "chromadb>=0.6.0",
    "tweepy>=4.14.0",
    "sendgrid>=6.11.0",
    "stripe>=11.0.0",
    "google-ads>=25.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["polsia-tests-bak"]
addopts = "--tb=short -q"
markers = [
    "integration: marks tests that require real DB/Redis (deselect with '-m not integration')"
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
